--- a/src/Components/Signup.css
+++ b/src/Components/Signup.css
@@ -1,8 +1,8 @@
-.form-column{
+.sign-up-column{
     max-width: 500px;
 }
 
-.create-header{
+.create-signup-header{
     font-size: 25px;
     font-weight: bold;
 }
